--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to GitHub Pages
 
 on:
-  # Runs on pushes targeting the main branch
+  # Runs on pushes targeting the master branch
   push:
     branches: ["master"]
 
