--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,8 +51,8 @@ jobs:
       - name: Build with Next.js
         run: npm run build
         env:
-          # Prevent GitHub Pages from adding basePath
-          NEXT_PUBLIC_BASE_PATH: ""
+          # Enable GitHub Pages basePath
+          GITHUB_PAGES: "true"
           # Ensure we're building for custom domain
           GITHUB_PAGES_CUSTOM_DOMAIN: "slicervm.com"
 
