--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "deploy:fast": "./hack/deploy.sh"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "1.1.4",
+    "@radix-ui/react-label": "2.1.1",
+    "@radix-ui/react-slot": "1.1.1",
     "@tailwindcss/typography": "^0.5.19",
-    "gray-matter": "^4.0.3",
-    "next": "15.5.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
+    "next": "^15.5.9",
+    "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rehype-highlight": "^7.0.2",
-    "rehype-prism-plus": "^2.0.1",
-    "rehype-sanitize": "^6.0.0",
+    "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
-    "rehype-stringify": "^10.0.1",
-    "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-html": "^16.0.1",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.2",
-    "unified": "^11.0.5"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -38,8 +38,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
