--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ concurrency:
 jobs:
   # Build job
   build:
-    runs-on: ubuntu-latest
+    runs-on: actuated-8cpu-12gb
+#ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v5
