--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint",
     "format": "npx prettier --write .",
     "deploy": "npm run build && npx gh-pages -d out --dotfiles",
-    "deploy:fast": "./hack/deploy.sh"
+    "deploy:fast": "./hack/deploy.sh",
+    "og": "node hack/generate-og-image.mjs"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "1.1.4",
@@ -40,6 +41,7 @@
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
+    "puppeteer": "^24.37.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
